# font-convert

./: .gitignore  CMakeLists.txt  README.md  font.h  ft.h  harmonyos_sans_tc_thin_16.h  main.cpp  output.cpp  output.h  sqFont.h  ui.h  unicode.h  unicode.lua
